--- a/Resources/views/theme/resource/article/list.twig
+++ b/Resources/views/theme/resource/article/list.twig
@@ -1,14 +1,14 @@
 <div class="block">
     <div class="block-article-stream">
         <div class="title">Articles</div>
-        {% for article in articles %}
+        {% for resource in resources %}
             <article>
-                <div class="article-thumb"><img src="{{ media_url(article.picture) }}"></div>
+                <div class="article-thumb"><img src="{{ media_url(resource.picture) }}"></div>
                 <div class="article-content">
-                    <div class="article-date">{{ article.publicationDate|date('d.m.y') }}</div>
-                    <div class="article-title">{{ article.title }}</div>
-                    <div class="article-teaser">{{ article.teaser|raw }}</div>
-                    <a href="{{ router(article) }}" class="btn">Read more</a>
+                    <div class="article-date">{{ resource.publicationDate|date('d.m.y') }}</div>
+                    <div class="article-title">{{ resource.title }}</div>
+                    <div class="article-teaser">{{ resource.teaser|raw }}</div>
+                    <a href="{{ router(resource) }}" class="btn">Read more</a>
                 </div>
             </article>
         {% endfor %}
